address more code smells (#204)